# APMS

./: .gitignore  README.md
apms/: Cargo.toml  README.md
apms/localserver/scripts/: build-package.sh  serve-repo.py
apms/src/: main.rs
apms/src/commands/: commands.rs  delete.rs  install.rs  mod.rs
apms/src/utils/: download.rs  mirrors.rs  mod.rs  permissions.rs
